--- a/Fally WatchKit App/Base.lproj/Interface.storyboard
+++ b/Fally WatchKit App/Base.lproj/Interface.storyboard
@@ -9,10 +9,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11508"/>
     </dependencies>
     <scenes>
-        <!--Interface Controller-->
+        <!--Fall Detected Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="Fally_WatchKit_App" customModuleProvider="target">
+                <controller id="AgC-eL-Hgc" customClass="FallDetectedController" customModule="Fally_WatchKit_Extension">
                     <items>
                         <button width="1" height="28" alignment="center" verticalAlignment="bottom" title="Tap here if you're ok" id="sFq-uU-Nfa">
                             <color key="titleColor" red="0.49411764705882355" green="0.82745098039215681" blue="0.12941176470588234" alpha="1" colorSpace="calibratedRGB"/>
