--- a/Fally WatchKit App/Base.lproj/Interface.storyboard
+++ b/Fally WatchKit App/Base.lproj/Interface.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="D5U-rD-mJ5">
     <device id="watch38" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -67,6 +67,74 @@
                 </controller>
             </objects>
             <point key="canvasLocation" x="220" y="335"/>
+        </scene>
+        <!--Home Controller-->
+        <scene sceneID="ObD-0r-nFh">
+            <objects>
+                <controller spacing="5" id="D5U-rD-mJ5" customClass="HomeController" customModule="Fally_WatchKit_Extension">
+                    <items>
+                        <group width="1" alignment="left" spacing="7" id="eEv-n1-aPC">
+                            <items>
+                                <group width="30" height="30" alignment="left" radius="15" id="j1u-m5-eEK">
+                                    <items>
+                                        <imageView width="30" height="30" alignment="center" verticalAlignment="center" image="profile-img" id="rFc-qq-u76"/>
+                                    </items>
+                                </group>
+                                <group width="1" alignment="left" verticalAlignment="center" layout="vertical" id="Hh4-2g-2aF">
+                                    <items>
+                                        <label alignment="left" text="Hello" textAlignment="left" numberOfLines="2" id="3ik-zK-rg2">
+                                            <fontDescription key="font" type="system" pointSize="16"/>
+                                        </label>
+                                    </items>
+                                </group>
+                            </items>
+                            <edgeInsets key="margins" left="4" right="2" top="2" bottom="0.0"/>
+                        </group>
+                        <group width="1" alignment="left" layout="vertical" id="YEo-M5-ycx">
+                            <items>
+                                <group width="1" alignment="left" id="Kad-So-cZM">
+                                    <items>
+                                        <label alignment="left" text="Current location" id="mzi-go-rZm">
+                                            <fontDescription key="font" type="system" weight="medium" pointSize="15"/>
+                                        </label>
+                                    </items>
+                                </group>
+                                <group width="1" alignment="left" id="7v8-qH-w8M">
+                                    <items>
+                                        <group width="10" height="10" alignment="center" verticalAlignment="center" radius="0.0" id="3WW-n9-Wfl">
+                                            <items>
+                                                <imageView width="10" alignment="center" verticalAlignment="center" image="gps-icon" id="Gtv-x5-ZWI"/>
+                                            </items>
+                                        </group>
+                                        <group width="1" alignment="center" verticalAlignment="center" id="OQB-Kq-XWH">
+                                            <items>
+                                                <label alignment="left" verticalAlignment="center" text="Chulalongkorn U." id="MvB-Sy-YC0">
+                                                    <color key="textColor" red="0.92941176470588238" green="0.031372549019607843" blue="0.83137254901960778" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="font" type="system" pointSize="12"/>
+                                                </label>
+                                            </items>
+                                        </group>
+                                    </items>
+                                </group>
+                                <group width="1" alignment="left" id="Tg7-tt-rPU">
+                                    <items>
+                                        <map height="62" alignment="left" id="Dqd-xm-YMZ"/>
+                                    </items>
+                                </group>
+                            </items>
+                            <color key="backgroundColor" red="0.14901960784313725" green="0.14901960784313725" blue="0.15686274509803921" alpha="1" colorSpace="calibratedRGB"/>
+                            <edgeInsets key="margins" left="6" right="6" top="4" bottom="6"/>
+                        </group>
+                    </items>
+                    <connections>
+                        <outlet property="helloMsg" destination="3ik-zK-rg2" id="OnM-M9-qP2"/>
+                        <outlet property="locationMap" destination="Dqd-xm-YMZ" id="RN3-Ue-2Vt"/>
+                        <outlet property="locationString" destination="MvB-Sy-YC0" id="mjE-G3-EMY"/>
+                        <outlet property="profileImg" destination="rFc-qq-u76" id="RBO-hJ-qk1"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="468" y="335"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
