--- a/Fally WatchKit App/Base.lproj/Interface.storyboard
+++ b/Fally WatchKit App/Base.lproj/Interface.storyboard
@@ -88,7 +88,7 @@
                                     </items>
                                 </group>
                             </items>
-                            <edgeInsets key="margins" left="4" right="2" top="2" bottom="0.0"/>
+                            <edgeInsets key="margins" left="4" right="2" top="4" bottom="0.0"/>
                         </group>
                         <group width="1" alignment="left" layout="vertical" id="YEo-M5-ycx">
                             <items>
@@ -118,7 +118,9 @@
                                 </group>
                                 <group width="1" alignment="left" id="Tg7-tt-rPU">
                                     <items>
-                                        <map height="62" alignment="left" id="Dqd-xm-YMZ"/>
+                                        <map height="60" alignment="left" id="Dqd-xm-YMZ">
+                                            <variation key="device=watch42mm" height="78"/>
+                                        </map>
                                     </items>
                                 </group>
                             </items>
@@ -126,7 +128,9 @@
                             <edgeInsets key="margins" left="6" right="6" top="4" bottom="6"/>
                         </group>
                     </items>
+                    <variation key="device=watch42mm" spacing="7"/>
                     <connections>
+                        <outlet property="gpsIcon" destination="Gtv-x5-ZWI" id="Ros-eE-PgJ"/>
                         <outlet property="helloMsg" destination="3ik-zK-rg2" id="OnM-M9-qP2"/>
                         <outlet property="locationMap" destination="Dqd-xm-YMZ" id="RN3-Ue-2Vt"/>
                         <outlet property="locationString" destination="MvB-Sy-YC0" id="mjE-G3-EMY"/>
